feat: Release version 1.2.0 with game folder shortcut and setup wizard fix / 发布1.2.0正式版，新增游戏目录快捷入口与安装向导修复 - Bump version to 1.2.0 (stable release from rc.1) / 升级版本至1.2.0正式版（从rc.1转正） - Add "Open Game Folder" button to main view for quick file explorer access / 主界面新增"打开游戏目录"按钮，可直接在资源管理器中打开游戏根目录 - Fix setup wizard skipping unnecessary version cleanup on first install by pre-setting CleanupDoneForVersion / 修复首次安装时安装向导完成后触发不必要的旧版本文件清理问题，完成安装时预写CleanupDoneForVersion跳过清理 - Inject IUpdateService into SetupWizardViewModel to support version-aware setup completion / SetupWizardViewModel注入IUpdateService以支持版本感知的安装完成逻辑

--- a/Resources/Strings.resx
+++ b/Resources/Strings.resx
@@ -1086,6 +1086,9 @@
   <data name="GitHubReleasesLoadedFromSessionCache" xml:space="preserve">
     <value>GitHub releases loaded from session cache for {0}/{1}</value>
   </data>
+  <data name="OpenGameFolder" xml:space="preserve">
+    <value>Open Game Folder</value>
+  </data>
   <data name="StartGame" xml:space="preserve">
     <value>Start</value>
   </data>
