feat: Beta version 1.2.1-beta.1 with multi-level fallback for remote config endpoints / 发布1.2.1-beta.1测试版本，新增远程配置多级fallback机制 - Implement multi-level fallback strategy for main config, mod config, and mod i18n URLs with automatic failover across primary, fallback, fallback2, and GitHub Raw channels / 主配置、Mod配置、ModI18n配置新增多级fallback机制，自动在主渠道、备用渠道、备用2渠道、GitHub Raw之间切换 - Add ModConfigUrlFallback, ModConfigUrlFallback2, ModI18nUrlFallback, ModI18nUrlFallback2 fields to MainConfig datamodel for remote-controlled fallback endpoints / MainConfig数据模型新增备用URL字段，支持远程下发配置多级回退地址 - Add GetMainConfigUrlCandidates, GetModConfigUrlCandidates, GetModI18nUrlCandidates methods to return ordered candidate URL lists for failover logic / 新增候选URL列表接口，返回按优先级排序的可用地址供fallback逻辑使用 - Add 8-second timeout for main config requests to prevent long waits on unreachable endpoints / 主配置请求新增8秒超时，避免不可达节点长时间阻塞 - Improve network connectivity test to iterate through all main config candidates with HEAD-to-GET fallback for nodes that reject HEAD requests / 网络连通性测试改为遍历所有候选地址，HEAD请求失败时自动回退GET请求 - Localize main config service log messages with new resource strings for better i18n support / 主配置服务日志消息国际化，新增相关资源字符串 - Bump version to 1.2.1-beta.1 with updated assembly metadata / 升级版本至1.2.1-beta.1并更新程序集元数据

--- a/Resources/Strings.resx
+++ b/Resources/Strings.resx
@@ -2672,4 +2672,61 @@ Do you want to restart now?</value>
   <data name="VersionCleanupDeleteFailed" xml:space="preserve">
     <value>Failed to delete obsolete file: {0}</value>
   </data>
+  <data name="MainConfigForceRefreshFailed" xml:space="preserve">
+    <value>Main config force refresh failed, keeping current config</value>
+  </data>
+  <data name="MainConfigLoadedFromManualUrl" xml:space="preserve">
+    <value>Dev mode: Loaded main config from manual URL: {0}</value>
+  </data>
+  <data name="MainConfigManualUrlLoadFailed" xml:space="preserve">
+    <value>Dev mode: Manual URL load failed, using builtin defaults: {0}</value>
+  </data>
+  <data name="MainConfigNoManualUrl" xml:space="preserve">
+    <value>Dev mode: No main config URL set, using builtin defaults</value>
+  </data>
+  <data name="MainConfigFetchFailedUsingDefaults" xml:space="preserve">
+    <value>Main config fetch failed, using builtin defaults</value>
+  </data>
+  <data name="MainConfigNotLoadedUsingDefaults" xml:space="preserve">
+    <value>Main config not loaded yet, using builtin defaults</value>
+  </data>
+  <data name="MainConfigDevModeNotLoaded" xml:space="preserve">
+    <value>Dev mode: Main config not loaded, current data source (builtin defaults):</value>
+  </data>
+  <data name="MainConfigLoadFailed" xml:space="preserve">
+    <value>Main config load failed ({0}): {1}</value>
+  </data>
+  <data name="MainConfigLoadedFromSource" xml:space="preserve">
+    <value>Main config loaded from {0}, active data sources:</value>
+  </data>
+  <data name="MainConfigBuiltinDefault" xml:space="preserve">
+    <value> (builtin default)</value>
+  </data>
+  <data name="MainConfigRemote" xml:space="preserve">
+    <value> (remote)</value>
+  </data>
+  <data name="MainConfigProxyServersDelivered" xml:space="preserve">
+    <value>ProxyServers = {0} nodes delivered:</value>
+  </data>
+  <data name="MainConfigProxyServersNotDelivered" xml:space="preserve">
+    <value>ProxyServers = (not delivered, using local enum)</value>
+  </data>
+  <data name="MainConfigFetchUrlFailed" xml:space="preserve">
+    <value>Main config fetch failed ({0}): {1}</value>
+  </data>
+  <data name="MainConfigTriggerFallback" xml:space="preserve">
+    <value>Triggering fallback, trying next main config channel</value>
+  </data>
+  <data name="MainConfigFetchingFrom" xml:space="preserve">
+    <value>Fetching main config from: {0}</value>
+  </data>
+  <data name="MainConfigDeserializationFailed" xml:space="preserve">
+    <value>Deserialization failed</value>
+  </data>
+  <data name="MainConfigFetchSuccess" xml:space="preserve">
+    <value>Main config fetched successfully: {0}</value>
+  </data>
+  <data name="MainConfigFetchTimeout" xml:space="preserve">
+    <value>Timeout (&gt;{0}s)</value>
+  </data>
 </root>
